--- a/docker/💽 制作自己的镜像.md
+++ b/docker/💽 制作自己的镜像.md
@@ -204,8 +204,6 @@ def serve_static(filename):
 
 使用环境变量来设置前后端的地址，例如使用 `.env` 文件来保存主机和端口配置。在前后端分别读取相同的环境变量，以确保统一地址。
 
-#### 示例
-
 在项目根目录下创建 `.env` 文件：
 
 ```plaintext
@@ -319,3 +317,32 @@ docker pull node:18
 ```
 
  按照上述步骤启动镜像。
+
+------
+
+####  数据库问题
+
+`host` 值需要和前后端的配置保持一致，以确保连接正常。通常建议在前后端和数据库连接中使用相同的主机名（`localhost` 或 `127.0.0.1`）来避免不必要的跨域和连接问题。
+
+##### 选择 `localhost` 还是 `127.0.0.1`
+
+1. **如果 Flask 应用在本机运行（不使用 Docker）**：  
+   使用 `localhost` 或 `127.0.0.1` 都可以，效果相同。
+
+   ```python
+   engine = create_engine(f"mysql+pymysql://{user}:{password}@localhost/{database}")
+   ```
+
+2. **如果 Flask 应用在 Docker 容器中运行，且 MySQL 在主机上运行**：  
+   使用 `host.docker.internal`（适用于 macOS 和 Windows）代替 `localhost` 或 `127.0.0.1` 来访问主机上的 MySQL 服务。
+
+   ```python
+   engine = create_engine(f"mysql+pymysql://{user}:{password}@host.docker.internal/{database}")
+   ```
+
+3. **如果 MySQL 和 Flask 都在 Docker 中运行并共享同一个网络**：  
+   可以在 Docker Compose 中定义一个网络，然后使用服务名称（如 `db`）作为主机名。这样确保 Flask 和 MySQL 容器之间的连接。
+
+##### 建议
+
+确保所有相关的 `host` 设置保持一致，并符合实际部署情况。
